# gIMble

./: .gitignore  .gitmodules  A_B.A>B.AB.tsv  A_B.A>B_B>A.AB.tsv  CHANGELOG.md  README.md  degeneracy_notes.txt  gIMble  gimble  gimble.blocks.h5  gimble.conda.yaml  gt2bsfs.py  hdf5v.py  mutypes.tsv  notes.txt  preparation_of_BED_files.txt  pytest.ini  requirements.txt  sage_environment.yml  samples_A_B.migration_A>B.join_AB.model.tsv  samples_A_B.migration_A>B.join_AB.point.tsv  samples_A_B.migration_A>B.join_AB.tsv  samples_A_B.migration_A>B_B>A.join_AB.model.tsv  samples_A_B.migration_A>B_B>A.join_AB.point.tsv  samples_A_B.migration_A>B_B>A.join_AB.tsv  setup.cfg  test.2_pop.2_ploidy.M+E.gexf  test.2_pop.2_ploidy.M+E.gml  test.2_pop.2_ploidy.M+E.paths.txt  testDivtab_T1.4_theta1.2.csv  test_gimble.sh  test_model.1.yaml  todo.txt  window_metrics.tsv
.gimblelibjunk/: cli_preprocess.py  model.py
cli/: blocks.py  delete.py  gridsearch.py  inference.py  info.py  interface.py  likelihood.py  likelihoodrecent.py  list.py  makeconfig.py  makegrid.py  makegrid_legacy.py  makemodel.py  measure.py  model.py  modify.py  notes.txt  optimise.py  optimize.py  optimize_legacy.py  parse.py  partitioncds.py  partitioncds_bck.py  plot.py  plot_gridsearch.py  plot_windows.py  plotbed.py  preprocess.py  query.py  setup.py  simulate.py  simulation.py  tally.py  variants.py  windows.py
dat/: test_model.2.csv  test_model.3.yaml  test_model.4.yaml
data/: sim.model.config.yaml  sim.model.tsv  test.bed  test.coord.txt  test.genomefile  test.sample_order.vcf  test.samples.csv  test.vcf  test.vcf.gz.tbi  test_70.bed  test_70.vcf  test_70_intervals.bed
doc/: commands.md  (+5 more)
(+298 files in other folders)
