[metadata]
name = gimble
version = 1.1.0
license = GNU GPLv3+ 
author = Lohse Lab
description = A genome-wide IM blockwise likelihood estimation toolkit 
long_description_content_type = text/markdown
long_description = file: README.md
url = https://github.com/LohseLab/gIMble
project_urls =
    Github = https://github.com/LohseLab/gIMble

classifiers = 
    Programming Language :: Python :: 3

[options]
packages = gIMble
python_requires = >=3.8
install_requires = 
    dask 
    demes 
    docopt 
    matplotlib 
    msprime 
    nlopt
    numcodecs 
    numpy 
    pandas 
    parallel 
    scikit-allel 
    tabulate 
    tqdm 
    zarr

[options.entry_points]
console_scripts =
  gimble-preprocess = cli.interface:main

[options.extras_require]
tests = 
    pytest>=6.2.5

[tool:pytest]
testpaths = 
    tests