[metadata]
name = gimble
version = 1.1.0
license = GNU GPLv3+ 
author = Lohse Lab
author_email = gertjanbisschop@gmail.com
description = A genome-wide IM blockwise likelihood estimation toolkit 
long_description_content_type = text/markdown
long_description = file: README.md
url = https://github.com/LohseLab/gIMble
project_urls =
    Github = https://github.com/LohseLab/gIMble

classifiers = 
    Programming Language :: Python :: 3

[options]
packages=find:
python_requires = >=3.8
install_requires =
    dask
    demes
    docopt
    matplotlib
    msprime
    nlopt
    numcodecs
    numpy
    pandas
    scikit-allel 
    tabulate
    tqdm
    zarr

[options.entry_points]
console_scripts =
  gimble = cli.interface:main
